Fixed viewport layout issues.

--- a/css/desktop/landing.css
+++ b/css/desktop/landing.css
@@ -7,9 +7,9 @@
 
 
 #landing {
-  grid-template-areas: '. logo .' '. intro .' '. social .';
-  grid-template-columns: 10% 1fr 10%;
-  grid-template-rows: 10% 1fr 35%;
+  grid-template-areas: '. logo .' '. intro .' '. social .' '. . .';
+  grid-template-columns: 10% 90% 10%;
+  grid-template-rows: 10% 50% 30% 10%;
   min-height: 60rem;
 
   & #intro {
